--- a/composer.json
+++ b/composer.json
@@ -17,17 +17,17 @@
         "issues": "https://github.com/surda/back-button/issues"
     },
     "require": {
-        "php": ">=7.1",
+        "php": ">=7.1,<8.0",
         "nette/di": "^3.0",
         "surda/themeable-controls": "^1.0"
     },
     "require-dev": {
         "nette/tester": "^2.0",
-        "ninjify/nunjuck": "0.3.x-dev",
-        "phpstan/phpstan": "^0.11",
-        "phpstan/phpstan-strict-rules": "^0.11",
-        "phpstan/phpstan-nette": "^0.11",
-        "phpstan/phpstan-deprecation-rules": "^0.11"
+        "ninjify/nunjuck": "^0.3",
+        "phpstan/phpstan": "^0.12",
+        "phpstan/phpstan-strict-rules": "^0.12",
+        "phpstan/phpstan-nette": "^0.12",
+        "phpstan/phpstan-deprecation-rules": "^0.12"
     },
     "autoload": {
         "psr-4": {
